WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171610
REGRESSION (
r215951
): LayoutTest media/modern-media-controls/placard-support/placard-support-pip.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=171610
Summary
REGRESSION (r215951): LayoutTest media/modern-media-controls/placard-support/...
Ryan Haddad
Reported
2017-05-03 11:17:59 PDT
Created
attachment 308929
[details]
Crashlog LayoutTest media/modern-media-controls/placard-support/placard-support-pip.html is a flaky crash
https://build.webkit.org/results/Apple%20Sierra%20Release%20WK1%20(Tests)/r216023%20(1169)/media/modern-media-controls/placard-support/placard-support-pip-crash-log.txt
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fmodern-media-controls%2Fplacard-support%2Fplacard-support-pip.html
Attachments
Crashlog
(101.92 KB, text/plain)
2017-05-03 11:17 PDT
,
Ryan Haddad
no flags
Details
Patch
(2.57 KB, patch)
2017-05-04 20:07 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(4.62 KB, patch)
2017-05-04 20:16 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-05-03 11:18:54 PDT
The crash is beneath WebKit in AVPlayer. Application Specific Information: CRASHING TEST: media/modern-media-controls/placard-support/placard-support-pip.html *** Terminating app due to uncaught exception 'NSInternalInconsistencyException', reason: 'An instance 0x7fe5a8655d60 of class AVPlayer was deallocated while key value observers were still registered with it. Current observation info: <NSKeyValueObservationInfo 0x7fe5a80ddce0> ( <NSKeyValueObservance 0x7fe5a795a600: Observer: 0x7fe5a7bd8e50, Key path: rate, Options: <New: NO, Old: NO, Prior: NO> Context: 0x0, Property: 0x7fe5a7eecee0> )' terminating with uncaught exception of type NSException abort() called
Ryan Haddad
Comment 2
2017-05-03 13:01:36 PDT
Maybe this has something to do with the "workaround" that was removed from media/modern-media-controls/pip-support/pip-support-click.html in
https://trac.webkit.org/changeset/215951/webkit
Radar WebKit Bug Importer
Comment 3
2017-05-03 17:02:13 PDT
<
rdar://problem/31976820
>
Ryan Haddad
Comment 4
2017-05-04 10:20:45 PDT
Skipped media/modern-media-controls/pip-support/pip-support-click.html to see if that stops the crashes in
https://trac.webkit.org/r216191
Jeremy Jones
Comment 5
2017-05-04 17:23:37 PDT
(In reply to Ryan Haddad from
comment #4
)
> Skipped media/modern-media-controls/pip-support/pip-support-click.html to > see if that stops the crashes in
https://trac.webkit.org/r216191
I'm able to report the problem by doing run-webkit-tests LayoutTests/media/modern-media-controls/placard-support/placard-support-pip.html LayoutTests/media/modern-media-controls/pip-support/pip-support-click.html -1 --child-processes=1
Jeremy Jones
Comment 6
2017-05-04 20:07:06 PDT
Created
attachment 309132
[details]
Patch
Jeremy Jones
Comment 7
2017-05-04 20:16:35 PDT
Created
attachment 309133
[details]
Patch
WebKit Commit Bot
Comment 8
2017-05-05 08:49:57 PDT
Comment on
attachment 309133
[details]
Patch Clearing flags on attachment: 309133 Committed
r216245
: <
http://trac.webkit.org/changeset/216245
>
WebKit Commit Bot
Comment 9
2017-05-05 08:49:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug