REGRESSION (r215951): LayoutTest media/modern-media-controls/placard-support/placard-support-pip.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=171610 <rdar://problem/31976820>

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-05-05
Reviewed by Eric Carlson.

Source/WebKit/mac:

Fullscreen state gets confused because WK1 WebChromeClient doesn't implement exitVideoFullscreenToModeWithoutAnimation.

* WebCoreSupport/WebChromeClient.h:
* WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::exitVideoFullscreenToModeWithoutAnimation):

LayoutTests:

enable test: media/modern-media-controls/pip-support/pip-support-click.html

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/188625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216245 268f45cc-cd09-0410-ab3c-d52691b4dbfc